[package]
name = "binconf"
version = "0.2.750"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "Save and load from a binary configuration file with ease."
categories = ["config"]
keywords = ["hash", "config", "binary", "toml", "json"]
repository = "https://github.com/OLoKo64/binconf"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "examples"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["binary-conf"]
full = ["binary-conf", "toml-conf", "json-conf", "yaml-conf", "ron-conf"]
binary-conf = ["dep:bincode", "dep:xxhash-rust"]
toml-conf = ["dep:toml"]
json-conf = ["dep:serde_json"]
yaml-conf = ["dep:serde_yaml"]
ron-conf = ["dep:ron"]

[dependencies]
bincode = { version = "1.3.3", optional = true }
dirs = "5.0.1"
ron = { version = "0.8.1", optional = true }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", optional = true }
serde_yaml = { version = "0.9.34+deprecated", optional = true }
toml = { version = "0.8.19", optional = true }
xxhash-rust = { version = "0.8.12", features = ["xxh3"], optional = true }
